--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask==2.3.3
-flask_cors==4.0.0
 praw==7.7.1
 textblob==0.17.1
 nltk==3.8.1
 requests==2.31.0
-
+flask==2.3.3
+flask-cors==4.0.0
+python-dotenv
